    - Repository transferred to @CNAG-Biomedical-Informatics organization
    - Added support for arm64 (Apple Silicon / M-based Macs) architectures
    - 'mongosh' is now installed via apt.
    - Updated Dockerfile
    - BEACON => BFF-TOOLS:
      - 'lib/BEACON/ => 'lib/BFF', 'Beacon.pm' => 'Tools.pm'
      - 'mongodb' mode renamed to 'load'
      - Now accepts pre-annotated VCFs using `annotate: false` in YAML configuration (requires mandatory ANN fields)
      - Added an 'examples' directory featuring hg38 (GRCh38)
      - Added spinner for interactive execution of 'bin/beacon'
      - Added basic tests in 't/' directory
      - Internal scripts moved from 'lib/BEACON/bin/' to 'lib/internal/{complete,partial}/'
      - Updated 'bin/config.yaml' with placeholder `{base}`
      - Added $version, $java, and $arch information to 'log.json'
      - Updated tools versions:
        - 'bcftools': 1.15.1 -> 1.21-103
        - 'mongo-database-tools': ubuntu2004-100.5.1 -> ubuntu2204-100.9.4
        - 'ClinVar' from clinvar_20211218* to clinvar_20250312*
      - VCF2BFF:
        - Reads 'annotatedWith' from external 'config.yaml' (fixed typo: toolreferences.dbSNSFP -> dbNSFP)
        - Added Sequence Ontology (SO) terms for calculated variant consequences:
            https://www.ensembl.org/info/genome/variation/prediction/predicted_data.html
        - Added t/ and debugging mode 'bff-pretty'

2.0.7  2025-02-22
    - Moved 'browser/web' to 'utils/bff_browser/static/assets'
    - Added argument '-projectdir-override' to enable external assignment of id (e.g., Celery)
    - Renamed internal parameter from 'ncpu' to 'threads' and option '-n' to '-t'

2.0.6  2025-01-15
    - Created a Flask app for 'utils/bff_browser' (currently in development)
    - Changed 'bff2html' to output JSON arrays instead of NDJSON for files like 'foo.json' (e.g., 'exome.json')
    - Updated 'docker-compose.yaml' to reflect recent changes