@@ -7,16 +7,17 @@ use File::Compare;
 
 # Define file names
 my $output_file    = "t/genomicVariationsVcf-dev-bff.json.gz";
-my $reference_file = "t/expected_genomicVariationsVcf-dev-bff.json.gz";  # adjust if needed
+my $reference_file = "t/expected_genomicVariationsVcf-dev-bff.json.gz";    # adjust if needed
 
 # Remove any existing output file to ensure a clean test
 unlink $output_file if -e $output_file;
 
 # Build the command line
-my $cmd = "perl vcf2bff.pl -i t/test_pathogenic.vcf.gz --genome hg19 -dataset-id foo -project-dir 123456789 -f bff-pretty -out-dir t";
+my $cmd =
+"perl vcf2bff.pl -i t/test_pathogenic.vcf.gz --genome hg19 -dataset-id foo -project-dir 123456789 -f bff-pretty -out-dir t";
 
 # Run the command, capturing both stdout and stderr
-my $cmd_output = `$cmd 2>&1`;
+my $cmd_output  = `$cmd 2>&1`;
 my $exit_status = $? >> 8;
 
 # Determine number of tests:
@@ -38,16 +39,23 @@ if ( -e $reference_file ) {
       or die "gunzip failed for $output_file: $GunzipError";
     gunzip $reference_file => \$ref_content
       or die "gunzip failed for $reference_file: $GunzipError";
-    
-    # Sort the contents line-by-line
-    my $sorted_output = join "\n", sort split /\n/, $output_content;
-    my $sorted_ref    = join "\n", sort split /\n/, $ref_content;
 
+    # Sort the contents line-by-line
+    # Filter and sort the contents, skipping lines with 'hostname' or 'threadshost'
+    my $sorted_output = join "\n",
+      sort grep { $_ !~ /hostname|threadshost/ } split /\n/, $output_content;
+
+    my $sorted_ref = join "\n",
+      sort grep { $_ !~ /hostname|threadshost/ } split /\n/, $ref_content;
     unlink($output_file);
-    
-    is( $sorted_output, $sorted_ref, "Sorted uncompressed content matches the expected reference" );
-} else {
-    pass("Reference file '$reference_file' not found, skipping file content comparison");
+
+    is( $sorted_output, $sorted_ref,
+        "Sorted uncompressed content matches the expected reference" );
+}
+else {
+    pass(
+"Reference file '$reference_file' not found, skipping file content comparison"
+    );
 }
 
 done_testing();
